# locally-correct

./: .gitignore  NOTICE  README.md  pyproject.toml
docs/: paper_01_citation_log.json
eval/: harness.py  sweep_deterministic.py  verify_citations.py
eval/configs/: _taxonomy.py  authority_partition.py  base.py  composed.py  gpt_no_approver.py  gpt_with_approver.py
eval/records/handcrafted/: type_d_captured_economic_dependence.json  type_d_smoke.json
eval/results/: smoke__authority_partition__deterministic__smoke_type_d_002_economic_dependence__n5.json  smoke__authority_partition__predicate-graph-v0__smoke_type_d_001.json  smoke__composed__gpt-5.4+predicate-graph__smoke_type_d_001.json  smoke__composed__gpt-5.4-mini+predicate-graph__smoke_type_d_001.json  smoke__composed__gpt-5.4-mini__smoke_type_d_001.json  smoke__composed__gpt-5.4-mini__smoke_type_d_002_economic_dependence__n5.json  smoke__composed__gpt-5.4__smoke_type_d_001.json  smoke__composed__gpt-5.4__smoke_type_d_002_economic_dependence__n5.json  smoke__gpt_no_approver__gpt-5.4-mini__smoke_type_d_001.json  smoke__gpt_no_approver__gpt-5.4__smoke_type_d_001.json  smoke__gpt_with_approver__gpt-5.4-mini__smoke_type_d_001.json  smoke__gpt_with_approver__gpt-5.4-mini__smoke_type_d_002_economic_dependence__n5.json  smoke__gpt_with_approver__gpt-5.4__smoke_type_d_001.json  smoke__gpt_with_approver__gpt-5.4__smoke_type_d_001__n5.json  smoke__gpt_with_approver__gpt-5.4__smoke_type_d_002_economic_dependence__n5.json
src/authority_partition/: __init__.py  nodes.py  verdict.py
